text align update

--- a/envisioning.html
+++ b/envisioning.html
@@ -68,5 +68,5 @@ document.addEventListener('DOMContentLoaded', function () {
 <div class="main">
 <body class="project">
     <div class="locked">
-        <p>This project is confidential. Please contact me for more details.</p>
+        <p>This project is confidential.<br> Please contact me for more details.</p>
     </div>
