updated type styling

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ document.addEventListener('DOMContentLoaded', function () {
       <div class="accordion">
         <a href="caregoals.html">
           <div class="grid-item1">Care Goals Guide</div>
-          <div class="grid-item2">Supporting patients with cancer in goals of care discussions with their clinician.</div>
+          <div class="grid-item2">Supporting patients with cancer in goals of care discussions</div>
           <div class="grid-item3">UX Research</div>
           <div class="arrow"><img src="images/arrow.svg"></div>
         </a>
@@ -123,7 +123,7 @@ document.addEventListener('DOMContentLoaded', function () {
       <div class="accordion">
         <a href="https://animalcrossingchecklist.netlify.app/" target="blank">
           <div class="grid-item1">Animal Crossing List</div>
-          <div class="grid-item2">Providing Animal Crossing players with means to track their progress.</div>
+          <div class="grid-item2">Providing Animal Crossing players with means to track their progress</div>
           <div class="grid-item3">Front-End Development & Design</div>
           <div class="arrow"><img src="images/arrow.svg"></div>
         </a>
@@ -131,7 +131,7 @@ document.addEventListener('DOMContentLoaded', function () {
       <div class="accordion">
         <a href="https://figmastalker.netlify.app/" target="blank">
           <div class="grid-item1">Figma Stalker</div>
-          <div class="grid-item2">Recreating the experience of being followed in Figma.</div>
+          <div class="grid-item2">Recreating the experience of being followed in Figma</div>
           <div class="grid-item3">Front-End Development & Design</div>
           <div class="arrow"><img src="images/arrow.svg"></div>
         </a>
