replace index.html with /

--- a/antologi.html
+++ b/antologi.html
@@ -71,7 +71,7 @@ document.addEventListener('DOMContentLoaded', function () {
         <nav>
             <section class="navigation">
                 <div class="left-nav">
-                    <a href="index.html" class="hover-underline-animation">Close</a>
+                    <a href="/" class="hover-underline-animation">Close</a>
                 </div>
                 <div class="right-nav">
                     <div>
