add unsent letters

--- a/index.html
+++ b/index.html
@@ -121,6 +121,14 @@ document.addEventListener('DOMContentLoaded', function () {
         </a>
       </div>
       <div class="accordion">
+        <a href="assets/Tsui_Shelley_Final_Nonimpositioned.pdf" target="blank">
+          <div class="grid-item1">Unsent Letters</div>
+          <div class="grid-item2">Compiling letters that were never sent or never had the chance to be</div>
+          <div class="grid-item3">Publication Design</div>
+          <div class="arrow"><img src="images/arrow.svg"></div>
+        </a>
+      </div>
+      <div class="accordion">
         <a href="https://animalcrossingchecklist.netlify.app/" target="blank">
           <div class="grid-item1">Animal Crossing List</div>
           <div class="grid-item2">Providing Animal Crossing players with means to track their progress</div>
