--- a/mixedreality.html
+++ b/mixedreality.html
@@ -81,6 +81,9 @@ document.addEventListener('DOMContentLoaded', function () {
                         <a href="https://linkedin.com/in/shelley-tsui" class="hover-underline-animation" target="_blank">LinkedIn</a>
                     </div>
                     <div>
+                        <a href="mailto:tsuishelley@gmail.com" class="hover-underline-animation">Contact</a>
+                    </div>
+                    <div>
                         <button id="theme-toggle" class="hover-underline-animation"><img src="assets/light-mode.svg"></button>
                     </div>
                 </div>
