--- a/milo.html
+++ b/milo.html
@@ -113,7 +113,7 @@ document.addEventListener('DOMContentLoaded', function () {
     <footer>
         <div class="about-details">
             <p>
-              I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. I’ve learned to acknowledge and embrace the design process as fluid, never fixed. My favorite feeling is using design to legitimize ideas and make things come to life. Some of my past collaborators include Microsoft, Google, Amazon, Curious VC, and Pioneer Square Labs.
+              I graduated from the University of Washington with a Bachelor of Design in visual communication and a minor in informatics. I’ve learned to acknowledge and embrace the design process as fluid, never fixed. Some of my past collaborators include Microsoft, Google, Amazon, Curious VC, and Pioneer Square Labs.
               <br><br>
               Most recently I’ve obtained my certificate in front-end development as a complement to my design skills. Right now I’m freelancing, working on my own passion projects, and looking for my next opportunity in visual and/or UX design.
             </p>
