--- a/envisioning.html
+++ b/envisioning.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Shelley Tsui</title>
+    <title>Envisioning</title>
     <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="https://raw.githubusercontent.com/tsuishelley/portfolio/main/images/og-image.png"/>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-L95KC35WE5"></script>
@@ -68,5 +67,5 @@ document.addEventListener('DOMContentLoaded', function () {
 <div class="main">
 <body class="project">
     <div class="locked">
-        <p>This project is confidential.<br> Please contact me for more details.</p>
+        <p>These projects are confidential.<br> Please contact me at tsuishelley@gmail.com for more details.</p>
     </div>
