--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ document.addEventListener('DOMContentLoaded', function () {
         </section>
     </nav>
 </header>
-  <h1 id="intro" class="desktop">Shelley Tsui is a product designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. She's versed in front-end development, design, and most importantly <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>. Currently freelancing for start-ups.</h1>
-  <h1 id="intro" class="mobile">Shelley Tsui is a product designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. Currently freelancing for start-ups.</h1>
+  <h1 id="intro" class="desktop">Shelley Tsui is a designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. She's versed in front-end development, design, and most importantly <a href="https://www.youtube.com/watch?v=z3U0udLH974" target="_blank" class="italic-blue" id="cats">cats</a>. Currently freelancing for start-ups.</h1>
+  <h1 id="intro" class="mobile">Shelley Tsui is a designer based in <a href="https://www.seattlesouthside.com/" target="_blank" class="italic-blue" id="seattle">rainy Seattle</a>. Currently freelancing for start-ups.</h1>
   <div class="project-grid">
     <a href="antologi.html">
     <div class="project-item1">
