--- a/antologi.html
+++ b/antologi.html
@@ -91,10 +91,11 @@ document.addEventListener('DOMContentLoaded', function () {
     </header>
     <div class="project-container">
         <div class="sidebar">
-            <p>Antologi was an Area 120 project by Google that was focused on using ML to synthesize meetings and promote better async work. I worked alongside a wonderful senior designer Neha Tembey as we both provided long-term product support for the app.
+            <p>Antologi was an Area 120 project by Google that was focused on using ML to synthesize meetings and promote better async work. I worked alongside a wonderful senior designer Neha Tembey as we both provided long-term product support.
                 <br><br>
                 It was my first opportunity to work alongside developers and see the product being designed and coded in tandem with one another. It was also one of the earlier projects that sparked my interest in development, specifically front-end. Antologi existed as both a Chrome extension and mobile app.            </p>
             <br><br>
+            <a href="https://antologi.area120.com/" target="blank"><p>Marketing Site for Antologi</p></a>
             </div>
         <div class="image-panel">
             <div class="content">
