--- a/mixedreality.html
+++ b/mixedreality.html
@@ -94,6 +94,7 @@ document.addEventListener('DOMContentLoaded', function () {
             <p>This was a project done for Microsoft's Hololens in which we developed a visual identity for both their program and their dev days hackathon. Using a color palette inspired by the command line interface, we developed a brand system composed of animated spirographs, futuristic gradients, and the bold Lineto type face which pays homage to early game consoles.
             </p>
             <br><br>
+            <a href="https://learn.microsoft.com/en-us/shows/mixed-reality-dev-days/" target="blank"><p>Microsoft Mixed Reality Dev Days Archive</p></a>
             </div>
         <div class="image-panel">
             <div class="content">
