added the rhody

--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@ document.addEventListener('DOMContentLoaded', function () {
   <div>
     <div class="container">
       <div class="accordion">
+        <a href="rhody.html">
+          <div class="grid-item1">The Rhody</div>
+          <div class="grid-item2">Rebranding the Rhododendren Species Botanical Garden</div>
+          <div class="grid-item3">Visual Identity</div>
+          <div class="arrow"><img src="images/arrow.svg"></div>
+        </a>
+      </div>
+      <div class="accordion">
         <a href="caregoals.html">
           <div class="grid-item1">Care Goals Guide</div>
           <div class="grid-item2">Supporting patients with cancer in goals of care discussions</div>
