--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ document.addEventListener('DOMContentLoaded', function () {
     <div class="container">
       <div class="accordion">
         <a href="rhody.html">
-          <div class="grid-item1">The Rhody</div>
+          <div class="grid-item1">RSBG</div>
           <div class="grid-item2">Rebranding the Rhododendren Species Botanical Garden</div>
           <div class="grid-item3">Visual Identity</div>
           <div class="arrow"><img src="images/arrow.svg"></div>
