--- a/milo.html
+++ b/milo.html
@@ -100,10 +100,11 @@ document.addEventListener('DOMContentLoaded', function () {
         <div class="image-panel">
             <div class="content">
                 <img src="milo-images/milo-image.png">
+                <img src="milo-images/milo-logo.png">
+                <img src="milo-images/milo-at-glance.png">
                 <img src="milo-images/brand-guidelines.png">
+                <img src="milo-images/milo-home.png">
                 <img src="milo-images/health-icons.png">
-                <img src="milo-images/milo-site.png">
-                <img src="milo-images/business-cards.png">
                 <img src="milo-images/milo-tshirt.png">
             </div>
         </div>
