more rhody collateral

--- a/rhody.html
+++ b/rhody.html
@@ -100,9 +100,12 @@ document.addEventListener('DOMContentLoaded', function () {
             <div class="content">
                 <img src="rhody-images/rhodysite.png">
                 <img src="rhody-images/rhodycards.png">
+                <img src="rhody-images/rhodyticket.png">
                 <img src="rhody-images/rhodytotebag.png">
                 <img src="rhody-images/rhodybrochure.png">
                 <img src="rhody-images/rhodybrochure2.png">
+                <img src="rhody-images/rhodyshop.png">
+                <img src="rhody-images/rhodyletterhead.png">
                 <img src="rhody-images/rhodysignage.png">
             </div>
         </div>
