--- a/rhody.html
+++ b/rhody.html
@@ -91,7 +91,7 @@ document.addEventListener('DOMContentLoaded', function () {
     </header>
     <div class="project-container">
         <div class="sidebar">
-            <p>This was a fun design sprint I gave myself to rebrand a site that was local to my beloved city of Federal Way over two days. Using thick squiggly lines meant to allude to the roots of plants and off-whites to soften the contrast between dark green, I crafted a quick identity for the Rhododendren Species Botanical Garden to be both elegant and inviting at the same time.
+            <p>This was a fun design sprint I gave myself to rebrand a site that was local to my beloved city of Federal Way. Using thick squiggly lines to allude to the roots of plants and off-whites to soften the contrast between dark green, I crafted a quick identity for the Rhododendren Species Botanical Garden to be both elegant and inviting at the same time.
             <br><br>
             If you're ever in the Federal Way area, some of my recommendations include Dash Point State Park, Redondo Beach, Browns Point Lighthouse, and of course "The Rhody"!
             </p>
