swap totebag image again

--- a/rhody.html
+++ b/rhody.html
@@ -101,6 +101,7 @@ document.addEventListener('DOMContentLoaded', function () {
                 <img src="rhody-images/rhodysite.png">
                 <img src="rhody-images/rhodycards.png">
                 <img src="rhody-images/rhodytotebag.png">
+                <img src="rhody-images/rhodypath.png">
                 <img src="rhody-images/rhodybrochure.png">
                 <img src="rhody-images/rhodybrochure2.png">
                 <img src="rhody-images/rhodyshop.png">
