swapped milo images

--- a/milo.html
+++ b/milo.html
@@ -99,13 +99,16 @@ document.addEventListener('DOMContentLoaded', function () {
             </div>
         <div class="image-panel">
             <div class="content">
+                <img src="milo-images/milo-site.png">
                 <img src="milo-images/milo-image.png">
-                <img src="milo-images/milo-logo.png">
-                <img src="milo-images/milo-at-glance.png">
-                <img src="milo-images/brand-guidelines.png">
-                <img src="milo-images/milo-home.png">
-                <img src="milo-images/health-icons.png">
-                <img src="milo-images/milo-tshirt.png">
+                <img src="milo-images/milo-cards.png">
+                <img src="milo-images/milo-box.png">
+                <img src="milo-images/milo-instagram.png">
+                <img src="milo-images/milo-icons.png">
+                <img src="milo-images/milo-packet.png">
+                <img src="milo-images/milo-img2.png">
+                <img src="milo-images/milo-tote.png">
+
             </div>
         </div>
     </div>
